# BIDS-Manager

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  bids_editor_ancpbids.py  bids_maganer.py  bids_manager.py  build_heuristic_from_tsv.py  dicom_inventory.py  post_conv_renamer.py  pyproject.toml  run_heudiconv_from_heuristic.py
Installers/Linux/: install_BIDS_Manager.sh
Installers/MacOS/: install_BIDS_Manager.command
Installers/Windows/: install_BIDS_Manager.bat
bids_manager/: __init__.py  _study_utils.py  bids_editor_ancpbids.py  bids_metadata_engine.py  bids_schema.py  build_dcm2bids_config.py  build_heuristic_from_tsv.py  dicom_inventory.py  dicom_metadata_deep_mining.py  editor_tab.py  eeg_meg_inventory.py  gui.py  name_guesser.py  physio_conversion.py  post_conv_renamer.py  run_dcm2bids.py  run_dcm2niix_from_scans.py  run_heudiconv_from_heuristic.py  run_mne_bids.py  scans_utils.py  schema_config.py  schema_naming.py  schema_renamer.py
bids_manager.egg-info/: PKG-INFO  requires.txt
bids_manager/GUI/: __init__.py  common.py  converter.py  editor.py  main_window.py
bids_manager/renaming/: schema_renamer.py
bids_manager/visualization/: __init__.py  freesurfer_surface.py  nifti_viewer.py  scene_utils.py  surface_3d.py  volume_3d.py  widgets.py
bidsmgr/: __init__.py  main.py
bidsmgr/classifier/: __init__.py  dcm2niix_bidsguess.py  sequence_dict.py  types.py  user_rules.py
bidsmgr/cli/: __init__.py  _scaffold.py  convert.py  create.py  metadata.py  project.py  rebuild.py  scan.py  validate.py
bidsmgr/converter/: __init__.py  registry.py  types.py
bidsmgr/converter/backends/: __init__.py  dcm2niix_direct.py  mne_bids.py  physio_dcm.py
bidsmgr/editor/: __init__.py  _bidsval_adapter.py  bidsmgr_checks.py  html_report.py  types.py  validator.py
bidsmgr/fixups/: __init__.py  companion.py  eeg_sidecar.py  fieldmaps.py  intended_for.py  scans_tsv.py
bidsmgr/gui/: __init__.py  _update_helper.py  about_dialog.py  app_icon.py  app_settings.py  bulk_edit_dialog.py  column_manager_dialog.py  combo_popup.py  converter_panel.py  editor_issues_dialog.py  editor_panel.py  filter_pane.py  icons.py  issues_dialog.py  main_window.py  metadata_help.py  output_fs_pane.py  properties_panel.py  raw_fs_pane.py  recording_meta_dialog.py  settings_dialog.py  theme.qss  theme_manager.py  update_widgets.py  updater.py  welcome_panel.py
bidsmgr/gui/delegates/: __init__.py  bids_tree.py  choice_delegate.py  inspection_cells.py  row_state.py
bidsmgr/gui/models/: __init__.py  inventory.py
bidsmgr/gui/widgets/: __init__.py  bids_tree_pane.py  edit_history.py  image_label.py  json_tree_view.py  nifti_viewer_pane.py  panel_frame.py  primitives.py  recording_viewer_pane.py  sidecar_form_pane.py  spinner.py  (+5 more)
bidsmgr/inventory/: __init__.py  _time.py  dataset_identity.py  eeg_meg.py  mri_dicom.py  probe_convert.py  rebuild.py  subject_identity.py  types.py
bidsmgr/metadata/: __init__.py  demographics.py  engine.py  phenotype.py  types.py
bidsmgr/planner/: __init__.py
bidsmgr/project/: __init__.py  log.py  orchestration.py  project.py  provenance.py  replay.py  types.py  workspace.py
bidsmgr/recording_meta/: __init__.py  models.py  resolve.py  schema_types.py  serialize.py
bidsmgr/schema/: __init__.py  engine.py  loader.py  types.py  validation.py
bidsmgr/util/: __init__.py  cancel.py  paths.py  qt_platform.py  system_info.py
bidsmgr/workers/: __init__.py  convert.py  file_report.py  meeg_recording_loader.py  metadata.py  nifti_loader.py  report.py  scan.py  tsv_loader.py  validate.py
docs/: PULL_REQUEST.md  architecture.md  gui_mockups.html  improvement_plan.md  super_plan.md
docs/inspector_proto/: README.md  data.py  proto.py  pyproject.toml  theme.qss
docs/screenshots/: README.md
tests/: test_bids_metadata_engine.py  test_bids_schema.py  test_build_dcm2bids_config.py  test_eeg_meg_pipeline.py  test_physio_conversion.py  test_proposed_names.py  test_run_heudiconv_physio.py  test_schema_renamer.py  test_sequence_dictionary.py
tests/fixtures/: __init__.py
tests/gui/: __init__.py  conftest.py  test_bulk_edit.py  test_column_manager.py  test_convert_worker.py  test_converter_panel.py  test_editor_interactivity.py  test_editor_tree.py  test_editor_validate.py  test_editor_validate_partial.py  test_highlight_repeats.py  test_inspection_footer_and_about.py  test_inventory_model.py  test_issue_visibility.py  test_nifti_viewer.py  test_output_fs_pane.py  test_panel_frame.py  test_properties_panel.py  test_recording_loader_worker.py  test_recording_meta_dialog.py  test_recording_viewer.py  test_resume.py  test_scan_rules.py  test_scan_worker.py  test_settings_and_workers.py  test_side_panes.py  test_sidecar_edit.py  test_sidecar_form.py  test_sidecar_tree_view.py  test_theme_refresh.py  test_tsv_viewer.py  test_validation_pane.py  test_view_switcher.py  test_welcome.py  test_widgets_smoke.py
tests/integration/: __init__.py
tests/real_data/: __init__.py  test_all_mri_datasets.py  test_convert.py  test_metadata.py  test_mri_scan.py  test_probe_convert.py  test_validator.py
tests/unit/: __init__.py  test_abort_detection.py  test_bidsguess_parser.py  test_bidsphysio_plug_missing_data.py  test_cancellation.py  test_cli_project.py  test_companion_fixup.py  test_convert_orchestrator.py  test_create.py  test_dataset_identity.py  test_dcm2niix_direct.py  test_demographics.py  test_dwi_fmap_classification.py  test_eeg_meg_inventory.py  test_eeg_sidecar_fixup.py  test_fieldmap_fixup.py  test_html_report.py  test_intended_for_fixup.py  test_merge_commit.py  test_metadata_engine.py  test_metadata_help.py  test_mne_bids_backend.py  test_nonimage_detection.py  test_phenotype.py  test_physio_backend.py  test_probe_anomaly.py  test_project_events.py  test_project_log.py  test_project_orchestration.py  test_project_project.py  test_project_provenance.py  test_project_replay.py  test_rebuild.py  test_recording_meta_models.py  test_recording_meta_scaffold.py  test_recording_reader.py  test_residual_outputs.py  test_run_normalization.py  test_scaffold.py  test_scan_auto_dispatch.py  (+10 more)
(+1 files in other folders)
