[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bids-manager"
version = "0.2.5"
description = "GUI application to manage BIDS datasets"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Karel López Vilaret", email = "karel.mauricio.lopez.vilaret@uni-oldenburg.de"}]
keywords = ["BIDS", "DICOM", "GUI", "Neuroimaging"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools<81",
    "pydicom==3.0.1",
    "pandas==2.3.1",
    "PyQt6==6.11.0",
    "PyQt6-WebEngine==6.11.0",
    "ancpbids>=0.3.1",
    "heudiconv-ancp",
    "dcm2bids>=3.2.0",
    "dcm2niix==1.0.20250506",
    "mne>=1.6",
    "mne-bids>=0.15",
    "edfio",
    "bidsphysio==21.6.24",
    "nibabel==5.3.2",
    "numpy==2.2.6",
    "psutil==7.0.0",
    "matplotlib==3.10.3",
    "joblib==1.4.2",
    "scikit-image==0.24.0",
    "pyqtgraph==0.14.0",
    "PyOpenGL==3.1.7",
]

[project.urls]
Homepage = "https://github.com/ANCPLabOldenburg/BIDS-Manager"
Documentation = "https://github.com/ANCPLabOldenburg/BIDS-Manager"
Source = "https://github.com/ANCPLabOldenburg/BIDS-Manager"
Tracker = "https://github.com/ANCPLabOldenburg/BIDS-Manager/issues"

[project.scripts]
bids-manager = "bids_manager.gui:main"
dicom-inventory = "bids_manager.dicom_inventory:main"
build-heuristic = "bids_manager.build_heuristic_from_tsv:main"
run-heudiconv = "bids_manager.run_heudiconv_from_heuristic:main"
build-dcm2bids-config = "bids_manager.build_dcm2bids_config:main"
run-dcm2bids = "bids_manager.run_dcm2bids:main"
eeg-meg-inventory = "bids_manager.eeg_meg_inventory:main"
run-mne-bids = "bids_manager.run_mne_bids:main"
bids-metadata = "bids_manager.bids_metadata_engine:main"
post-conv-renamer = "bids_manager.post_conv_renamer:main"
fill-bids-ignore = "bids_manager.fill_bids_ignore:main"

[tool.setuptools]
packages = ["bids_manager"]
include-package-data = true

[tool.setuptools.package-data]
"bids_manager" = [
    "miscellaneous/images/*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
